[metadata]
name = GraphDash
description = A web-based dashboard built from graphs and their metadata
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/AmadeusITGroup/graphdash
author = Alex Prengère
author_email = alex.prengere@amadeus.com
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
zip_safe = False
packages = find:
install_requires =
    PyYAML
    Flask
    Markdown
    Pygments
    stop-words
python_requires = >=3.6.1
setup_requires =
    setuptools_scm
scripts =
    GraphDashManage

[options.package_data]
graphdash =
    templates/*.html
    assets/css/*
    assets/js/*
    assets/img/*

[options.entry_points]
console_scripts =
    tfl = tfl.__main__:main
    GraphDash = graphdash.__main__:main
